--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <title>王亚东的简历</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/animate.min.css">
-        <link href="https://cdn.bootcss.com/fullPage.js/2.9.4/jquery.fullpage.css" rel="stylesheet">                   
-        <script src="http://libs.baidu.com/jquery/2.1.1/jquery.min.js"></script>
-        <script src="https://cdn.bootcss.com/fullPage.js/2.9.4/jquery.fullpage.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <link href="css/jquery.fullPage.css" rel="stylesheet">                   
+        <script src="js/jquery-3.1.1.min.js"></script>
+        <script src="js/jquery.fullPage.min.js"></script>
+        <script type="text/javascript" src="js/index.js"></script> 
     </head>
     <body>
     	<div id="cv"> 
