--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
         <title>王亚东的简历</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" type="text/css" href="css/animate.min.css">
-        <link href="css/jquery.fullPage.css" rel="stylesheet">                   
-        <script src="js/jquery-3.1.1.min.js"></script>
+        <link href="css/jquery.fullPage.css" rel="stylesheet">  
+        <script src="js/jquery-3.1.1.min.js"></script>   
+        <script type="text/javascript" src="js/iconfont.js"></script>           
         <script src="js/jquery.fullPage.min.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/index.js"></script> 
     </head>
     <body>
-    	<div id="cv">
+    	<div id="cv"> 
 	    	<div class="section">
 	    		<div class="hello">
 	    			<p class="hello">Hello World</p>	
@@ -56,6 +57,69 @@
 		    			<span class="skill fast">Ajax</span>
 		    			<span class="skill familiar">PS</span>
 		    		</div>
+	    		</div>
+	    	</div>
+	    	<div class="section">
+	    		<div class="project">
+	    			<h1>项目经验</h1>
+	    			<div class="row">
+	    				<div class="part-1">
+		    				<div class="col-2">
+		    					<a href="https://github.com/Aliennnnnn/JD/tree/master/JingDong">
+			    					<svg class="icon" aria-hidden="true">
+			    						<use xlink:href="#icon-jingdong"></use>
+			    					</svg>
+			    				</a>
+		    				</div>		
+		    				<div class="col-4">
+		    					<a href="https://github.com/Aliennnnnn/JD/tree/master/JingDong">京东首页</a>
+		    					<p>独立完成京东首页及其动态效果</p>
+		    				</div>
+		    			</div>
+	    				<div class="part-2">
+		    				<div class="col-2">
+		    					<a href="https://github.com/Aliennnnnn/IFE">
+			    					<svg class="icon" aria-hidden="true">
+			    						<use xlink:href="#icon-baidu"></use>
+			    					</svg>
+			    				</a>
+		    				</div>		
+		    				<div class="col-4">
+		    					<a href="https://github.com/Aliennnnnn/IFE">baidu</a>
+		    					<p>百度任务学院Task</p>
+		    				</div>
+		    			</div>
+	    				<div class="clearboth"></div>
+	    			</div>
+	    			<div class="row">
+	    				<div class="part-1">
+		    				<div class="col-2">
+		    					<a href="https://github.com/Aliennnnnn/B2C/tree/gh-pages/B2C">
+			    					<svg class="icon" aria-hidden="true">
+			    						<use xlink:href="#icon-100"></use>
+			    					</svg>
+			    				</a>
+		    				</div>		
+		    				<div class="col-4">
+		    					<a href="https://github.com/Aliennnnnn/B2C/tree/gh-pages/B2C">100du</a>
+		    					<p>B2C网站100du制作</p>
+		    				</div>
+		    			</div>
+	    				<div class="part-2">
+		    				<div class="col-2">
+		    					<a href="#">
+			    					<svg class="icon" aria-hidden="true">
+			    						<use xlink:href="#icon-vue"></use>
+			    					</svg>
+			    				</a>
+		    				</div>		
+		    				<div class="col-4">
+		    					<a href="#">商业网站</a>
+		    					<p>Vue.js制作，包括首页,登录、注册,支付页面</p>
+		    				</div>
+		    			</div>
+	    				<div class="clearboth"></div>
+	    			</div>
 	    		</div>
 	    	</div>
 	    </div>
