--- a/index.html
+++ b/index.html
@@ -12,119 +12,6 @@
         <script type="text/javascript" src="js/index.js"></script> 
     </head>
     <body>
-<<<<<<< HEAD
-    	<div id="cv"> 
-	    	<div class="section">
-	    		<div class="hello">
-	    			<p class="hello">Hello World</p>	
-	    		</div>	
-	    	</div>
-	    	<div class="section">
-	    		<div class="about">
-	    			<img class="head" src="img/52addca960783bb5f67c936edc037d67.jpg">
-	    			<h1 class="name">王亚东</h1>
-	    			<p class="sex">男</p>
-	    			<p class="age">20岁</p>
-	    			<p class="school">安徽理工大学</p>
-	    			<p class="subtitle">路漫漫其修远兮，吾将上下而求索</p>
-	    			<p class="email">
-	    				<a href="mailto:aliennnnnn@foxmail.com">aliennnnnn@foxmail.com</a>
-	    			</p>
-	    		</div>	
-	    	</div>
-	    	<div class="section">
-	    		<div class="skills">
-	    			<h1>专业技能</h1>
-	    			<div class="row-3">
-		    			<span class="skill fast">jQuery</span>
-		    			<span class="skill familiar">Bootstrap</span>
-		    			<span class="skill familiar">Vue.js</span>
-		    		</div>
-	    			
-		    		<div class="row-2">
-		    			<span class="skill fast">HTML</span>	
-		    			<span class="skill fast">CSS</span>
-		    			<span class="skill familiar">HTML5</span>
-		    			<span class="skill fast">CSS3</span>
-		    			<span class="skill fast">JavaScript</span>
-		    		</div>
-		    		<div class="row-1">
-		    			<span class="skill fast">语义化</span>	
-		    			<span class="skill fast">W3C标准</span>
-		    		</div>
-		    		<div class="row-3">
-		    			<span class="skill fast">Markdown</span>
-		    			<span class="skill fast">Github</span>
-		    			<span class="skill fast">Ajax</span>
-		    			<span class="skill familiar">PS</span>
-		    		</div>
-	    		</div>
-	    	</div>
-	    	<div class="section">
-	    		<div class="project">
-	    			<h1>项目经验</h1>
-	    			<div class="row">
-	    				<div class="part-1">
-		    				<div class="col-2">
-		    					<a href="https://github.com/Aliennnnnn/JD/tree/master/JingDong">
-			    					<svg class="icon" aria-hidden="true">
-			    						<use xlink:href="#icon-jingdong"></use>
-			    					</svg>
-			    				</a>
-		    				</div>		
-		    				<div class="col-4">
-		    					<a href="https://github.com/Aliennnnnn/JD/tree/master/JingDong">京东首页</a>
-		    					<p>独立完成京东首页及其动态效果</p>
-		    				</div>
-		    			</div>
-	    				<div class="part-2">
-		    				<div class="col-2">
-		    					<a href="https://github.com/Aliennnnnn/IFE">
-			    					<svg class="icon" aria-hidden="true">
-			    						<use xlink:href="#icon-baidu"></use>
-			    					</svg>
-			    				</a>
-		    				</div>		
-		    				<div class="col-4">
-		    					<a href="https://github.com/Aliennnnnn/IFE">baidu</a>
-		    					<p>百度任务学院Task</p>
-		    				</div>
-		    			</div>
-	    				<div class="clearboth"></div>
-	    			</div>
-	    			<div class="row">
-	    				<div class="part-1">
-		    				<div class="col-2">
-		    					<a href="https://github.com/Aliennnnnn/B2C/tree/gh-pages/B2C">
-			    					<svg class="icon" aria-hidden="true">
-			    						<use xlink:href="#icon-100"></use>
-			    					</svg>
-			    				</a>
-		    				</div>		
-		    				<div class="col-4">
-		    					<a href="https://github.com/Aliennnnnn/B2C/tree/gh-pages/B2C">100du</a>
-		    					<p>B2C网站100du制作</p>
-		    				</div>
-		    			</div>
-	    				<div class="part-2">
-		    				<div class="col-2">
-		    					<a href="#">
-			    					<svg class="icon" aria-hidden="true">
-			    						<use xlink:href="#icon-vue"></use>
-			    					</svg>
-			    				</a>
-		    				</div>		
-		    				<div class="col-4">
-		    					<a href="#">商业网站</a>
-		    					<p>Vue.js制作，包括首页,登录、注册,支付页面</p>
-		    				</div>
-		    			</div>
-	    				<div class="clearboth"></div>
-	    			</div>
-	    		</div>
-	    	</div>
-	    </div>
-=======
         <div id="cv"> 
             <div class="section">
                 <div class="about">
@@ -151,7 +38,7 @@
                     <div class="row-2">
                         <span class="skill fast">HTML</span>    
                         <span class="skill fast">CSS</span>
-                        <span class="skill familiar">CSS3</span>
+                        <span class="skill familia">CSS3</span>
                         <span class="skill fast">JavaScript</span>                      
                     </div>
                     <div class="row-1">
@@ -230,6 +117,5 @@
                 </div>
             </div>
         </div>
->>>>>>> refs/remotes/origin/master
     </body>
 </html>
