--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="row-2">
                         <span class="skill fast">HTML</span>    
                         <span class="skill fast">CSS</span>
-                        <span class="skill familia">CSS3</span>
+                        <span class="skill familiar">CSS3</span>
                         <span class="skill fast">JavaScript</span>                      
                     </div>
                     <div class="row-1">
