--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="cv"> 
             <div class="section">
                 <div class="about">
-                    <img class="head" src="img/52addca960783bb5f67c936edc037d67.jpg">
+                    <div><img class="head" src="img/pic.jpg"></div>
                     <h1 class="name">王亚东</h1>
                     <p class="info">男 / 20岁</p>                   
                     <p class="school">安徽理工大学</p>
